# popo

./: .env.example  .gitignore  README.md  pyproject.toml
popo_cli/: __init__.py  db.py  main.py
popo_cli/panel/: __init__.py  candlestick.py  config.py  llm_predictor.py  main.py  utils.py
popo_cli/panel/data/: __init__.py  binance.py  chainlink.py  chainlink_ws.py  polymarket.py  polymarket_ws.py
popo_cli/panel/engines/: __init__.py  candle_direction.py  edge.py  probability.py  regime.py  signal_stabilizer.py
popo_cli/panel/indicators/: __init__.py  heiken_ashi.py  macd.py  rsi.py  vwap.py
popo_cli/trading/: __init__.py  db.py  models.py  service.py
